--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }],
     "require": {
         "php": "^7.0",
-        "illuminate/support": "5.3.* || 5.4.* || 5.5.*",
+        "illuminate/support": "^5.6",
         "guzzlehttp/guzzle": "^6.2",
         "guzzlehttp/oauth-subscriber": "^0.3.0",
         "nesbot/carbon": "^1.21",
